// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Features default 1`] = `
.c2 {
  border: 1px solid #ffffff;
  border-radius: 100%;
  display: inline-block;
  height: 32px;
  line-height: 32px;
  text-align: center;
  width: 32px;
}

.c1 {
  color: #ffffff;
}

.c1 > p {
  border-top: 2px solid #868d95;
  font-weight: bold;
  margin-bottom: 0;
  margin-top: 16px;
  padding-top: 16px;
}

.c0 {
  margin: 0 auto;
  overflow: auto;
}

@media (max-width:575px) {
  .c0 > div {
    margin-left: auto;
    margin-right: auto;
    width: 296px;
  }

  .c0 > div:nth-last-child(n + 2) {
    margin-bottom: 64px;
  }
}

@media (min-width:576px) {
  .c0 > div {
    float: left;
  }

  .c0 > div:nth-last-child(n + 3) {
    margin-bottom: 64px;
  }
}

@media (max-width:767px) {
  .c0 > div p {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (min-width:576px) and (max-width:767px) {
  .c0 {
    max-width: 560px;
  }

  .c0 > div {
    width: 264px;
  }

  .c0 > div:nth-child(odd) {
    margin-right: 32px;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 656px;
  }

  .c0 > div {
    width: 296px;
  }

  .c0 > div:nth-child(odd) {
    margin-right: 64px;
  }

  .c0 > div p {
    font-size: 20px;
    line-height: 24px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000000",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        1
      </span>
      <p>
        RecordRig is your dedicated gameplay recording PC.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        2
      </span>
      <p>
        Hook it up to your Xbox, PS4 or even your gaming PC.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        3
      </span>
      <p>
        Capture your gameplay videos in immersive 4K HDR quality.
      </p>
    </div>
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        4
      </span>
      <p>
        Stream directly to YouTube and Twitch, or save for later.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer default 1`] = `
.c3 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > img {
  height: 16px;
  margin-left: 8px;
  width: 19px;
}

.c3 > span {
  vertical-align: top;
}

.c4 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 > img {
  height: 16px;
  margin-left: 8px;
  width: 16px;
}

.c4 > span {
  vertical-align: top;
}

.c2 {
  height: 100%;
  width: 100%;
}

.c2 > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 {
  margin-bottom: 64px;
}

@media (max-width:767.9999px) {
  .c7 {
    margin-left: 40px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 20px;
    line-height: 32px;
    margin-left: 82px;
  }
}

@media (max-width:767.9999px) {
  .c6 > img {
    height: 32px;
    width: 123px;
  }
}

@media (min-width:768px) {
  .c6 > img {
    height: 64px;
    width: 246px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    margin-left: 40px;
  }
}

@media (min-width:768px) {
  .c1 {
    float: right;
    margin-left: 8px;
    width: 50%;
  }
}

@media (max-width:767.9999px) {
  .c5 {
    margin-top: 64px;
  }
}

@media (min-width:768px) {
  .c5 {
    float: left;
    margin-top: 16px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <nav
      className="c2"
    >
      <ul>
        <li>
          <a
            className="c3"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Home
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c3"
            href="/shop"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Shop
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c4"
            href="https://twitter.com/RigRecord"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Twitter
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="c4"
            href="https://www.reddit.com/r/RecordRig/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Reddit
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <img
        alt=""
        src="/static/recordrig-logo.png"
      />
    </div>
    <p
      className="c7"
    >
      Industrieweg 46
      <br />
      6541 TW Nijmegen
      <br />
      The Netherlands
    </p>
  </div>
</div>
`;

exports[`Storyshots MainMenu default 1`] = `
.c1 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 > img {
  height: 16px;
  margin-left: 8px;
  width: 19px;
}

.c1 > span {
  vertical-align: top;
}

.c2 {
  color: #000;
  font-size: 24px;
  height: 64px;
  line-height: 64px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > img {
  height: 16px;
  margin-left: 8px;
  width: 16px;
}

.c2 > span {
  vertical-align: top;
}

.c0 {
  height: 100%;
  width: 100%;
}

.c0 > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Home
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c1"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Shop
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="https://twitter.com/RigRecord"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Twitter
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="https://www.reddit.com/r/RecordRig/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Reddit
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar default 1`] = `
.c1 {
  display: block;
  height: 32px;
  margin-bottom: 12px;
  margin-top: 12px;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > img {
  height: 32px;
  width: 123px;
}

.c2 {
  border: 1px solid #0062ff;
  color: #0062ff;
  display: block;
  font-size: 16px;
  height: 16px;
  line-height: 16px;
  padding-left: 19px;
  padding-right: 19px;
  padding-bottom: 13px;
  padding-top: 11px;
  margin-bottom: 11px;
  margin-top: 11px;
  margin-right: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 22px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  position: relative;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 12px;
  outline: 0;
}

.c3 > img {
  height: 22px;
  margin-right: 8px;
  width: 26px;
}

.c3 > span {
  vertical-align: top;
}

.c4 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 20px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-top: 12px;
  outline: 0;
}

.c4 > img {
  height: 20px;
  margin-right: 8px;
  width: 24px;
}

.c4 > span {
  vertical-align: top;
}

.c0 {
  background-color: #fff;
  height: 64px;
  width: 100%;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 > ul > li:first-child {
  margin-right: auto;
}

@media (max-width:767.9999px) {
  .c1 {
    overflow: hidden;
    margin-left: 4px;
    width: 32px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-left: 8px;
  }
}

@media (max-width:767.9999px) {
  .c3 {
    overflow: hidden;
    width: 42px;
  }

  .c3 > span {
    visibility: hidden;
  }
}

@media (max-width:767.9999px) {
  .c4 {
    overflow: hidden;
    margin-right: 4px;
    width: 40px;
  }

  .c4 > span {
    visibility: hidden;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-right: 8px;
  }
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="c3"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
      </button>
    </li>
    <li>
      <button
        className="c4"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar items in bag 1`] = `
.c1 {
  display: block;
  height: 32px;
  margin-bottom: 12px;
  margin-top: 12px;
  padding-bottom: 4px;
  padding-top: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > img {
  height: 32px;
  width: 123px;
}

.c2 {
  border: 1px solid #0062ff;
  color: #0062ff;
  display: block;
  font-size: 16px;
  height: 16px;
  line-height: 16px;
  padding-left: 19px;
  padding-right: 19px;
  padding-bottom: 13px;
  padding-top: 11px;
  margin-bottom: 11px;
  margin-top: 11px;
  margin-right: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  background-color: #ff4e28;
  border-radius: 100%;
  color: #fff;
  height: 16px;
  font-size: 12px;
  font-weight: bold;
  left: 22px;
  line-height: 16px;
  position: absolute;
  top: 20px;
  width: 16px;
}

.c3 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 22px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  position: relative;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-right: 8px;
  margin-top: 12px;
  outline: 0;
}

.c3 > img {
  height: 22px;
  margin-right: 8px;
  width: 26px;
}

.c3 > span {
  vertical-align: top;
}

.c5 {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  font-size: 16px;
  height: 40px;
  line-height: 20px;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 9px;
  padding-top: 7px;
  margin-bottom: 12px;
  margin-left: 8px;
  margin-top: 12px;
  outline: 0;
}

.c5 > img {
  height: 20px;
  margin-right: 8px;
  width: 24px;
}

.c5 > span {
  vertical-align: top;
}

.c0 {
  background-color: #fff;
  height: 64px;
  width: 100%;
}

.c0 > ul {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c0 > ul > li:first-child {
  margin-right: auto;
}

@media (max-width:767.9999px) {
  .c1 {
    overflow: hidden;
    margin-left: 4px;
    width: 32px;
  }
}

@media (min-width:768px) {
  .c1 {
    margin-left: 8px;
  }
}

@media (max-width:767.9999px) {
  .c3 {
    overflow: hidden;
    width: 42px;
  }

  .c3 > span {
    visibility: hidden;
  }
}

@media (max-width:767.9999px) {
  .c5 {
    overflow: hidden;
    margin-right: 4px;
    width: 40px;
  }

  .c5 > span {
    visibility: hidden;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-right: 8px;
  }
}

<nav
  className="c0"
>
  <ul>
    <li>
      <a
        className="c1"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="c2"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="c3"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
        <span
          className="c4"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        className="c5"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots OptimizedImage custom node 1`] = `
Array [
  <p>
    Scroll down for pictures.
  </p>,
  .c2 > img {
  vertical-align: "bottom";
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
    style={
      Object {
        "maxWidth": "600px",
        "paddingTop": "3000px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <img
            alt=""
            src="/static/god_of_war_compare_hdr_on_lowres.jpg"
          />
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="lazyload-placeholder"
          style={
            Object {
              "height": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots OptimizedImage default 1`] = `
Array [
  <p>
    Scroll down for pictures.
  </p>,
  .c2 > img {
  vertical-align: "bottom";
  width: 100%;
}

.c1 {
  width: 100%;
}

.c3 {
  position: absolute;
  top: 0;
  width: 100%;
}

.c0 {
  position: relative;
  width: 100%;
}

<div
    style={
      Object {
        "maxWidth": "600px",
        "paddingTop": "3000px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        <div
          className="c2"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_white_lowres.jpg"
          />
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="lazyload-placeholder"
          style={
            Object {
              "height": undefined,
            }
          }
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Section default 1`] = `
Array [
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c2 span {
  display: inline-block;
}

.c3 {
  color: #000;
}

@media (max-width:734.9999px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c2 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c2 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c2 span {
    max-width: 640px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2>
          <span>
            Some heading.
          </span>
        </h2>
      </div>
      <p
        className="c3"
      >
        Some paragraph.
      </p>
    </div>
  </div>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c2 span {
  display: inline-block;
}

.c3 {
  color: #000;
}

@media (max-width:734.9999px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c2 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c2 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c2 span {
    max-width: 640px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h2>
          <span>
            Another heading.
          </span>
        </h2>
      </div>
      <p
        className="c3"
      >
        Another paragraph.
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots Section intro 1`] = `
.c2 {
  padding-bottom: 64px;
  padding-left: 32px;
  padding-right: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c3 h1,
.c3 h2,
.c3 h3,
.c3 h4,
.c3 h5,
.c3 h6 {
  color: #da1e28;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c3 span {
  display: inline-block;
}

.c4 {
  color: #000;
}

@media (max-width:734.9999px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:575.9999px) {
  .c3 h1,
  .c3 h2,
  .c3 h3,
  .c3 h4,
  .c3 h5,
  .c3 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c3 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c3 h1,
  .c3 h2,
  .c3 h3,
  .c3 h4,
  .c3 h5,
  .c3 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c3 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c3 span {
    max-width: 640px;
  }
}

@media (max-width:399.9999px) {
  .c4 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c4 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c4 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c4 {
    max-width: 720px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <h2>
          <span>
            4K 60FPS + HDR
            <br />
            videos are the future.
          </span>
        </h2>
      </div>
      <p
        className="c4"
      >
        Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section rows 1`] = `
.c2 {
  width: 100%;
}

.c2:nth-last-child(n + 2) {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c5 h1,
.c5 h2,
.c5 h3,
.c5 h4,
.c5 h5,
.c5 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c6 {
  color: #ffffff;
}

.c4 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c4 > img {
  vertical-align: bottom;
}

.c4 > p {
  font-weight: bold;
}

.c3 {
  background-color: #13171A;
  width: 100%;
}

@media (max-width:734.9999px) {
  .c2 {
    display: block;
  }
}

@media (min-width:735px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:734.9999px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:399.9999px) {
  .c5 h1,
  .c5 h2,
  .c5 h3,
  .c5 h4,
  .c5 h5,
  .c5 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c5 h1,
  .c5 h2,
  .c5 h3,
  .c5 h4,
  .c5 h5,
  .c5 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c6 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c6 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c6 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c6 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt=""
          src="/static/god_of_war_compare_hdr_on.jpg?v=1"
          style={
            Object {
              "verticalAlign": "bottom",
              "width": "100%",
            }
          }
        />
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h3>
              Capture HDR gameplay videos
            </h3>
          </div>
          <p
            className="c6"
          >
            With RecordRig, you gain the ability to capture the darkest blacks, the brightest whites, and the full HDR (High Dynamic Range) color spectrum of the original game.
          </p>
        </div>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt=""
          src="/static/god_of_war_compare_hdr_off.jpg?v=1"
          style={
            Object {
              "verticalAlign": "bottom",
              "width": "100%",
            }
          }
        />
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h3>
              Capture HDR gameplay videos
            </h3>
          </div>
          <p
            className="c6"
          >
            With RecordRig, you gain the ability to capture the darkest blacks, the brightest whites, and the full HDR (High Dynamic Range) color spectrum of the original game.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section subsections 1`] = `
.c2 {
  width: 100%;
}

.c2:nth-last-child(n + 2) {
  margin-bottom: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  max-width: 1216px;
}

.c6 h1,
.c6 h2,
.c6 h3,
.c6 h4,
.c6 h5,
.c6 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c9 {
  color: #000;
}

.c7 {
  color: #ffffff;
}

.c5 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c5 > img {
  vertical-align: bottom;
}

.c5 > p {
  font-weight: bold;
}

.c4 {
  background-color: #13171A;
  width: 100%;
}

.c8 {
  background-color: #f2f4f8;
  width: 100%;
}

@media (max-width:734.9999px) {
  .c3 {
    display: block;
    width: 100%;
  }

  .c3:nth-child(odd) {
    margin-bottom: 16px;
  }
}

@media (min-width:735px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 50%;
  }

  .c3:nth-child(odd) {
    margin-right: 8px;
  }

  .c3:nth-child(even) {
    margin-left: 8px;
  }
}

@media (max-width:734.9999px) {
  .c2 {
    display: block;
  }
}

@media (min-width:735px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:734.9999px) {
  .c0 {
    display: block;
    padding-bottom: 128px;
    padding-top: 128px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 160px;
    padding-top: 160px;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-left: 16px;
    margin-right: 16px;
    padding-bottom: 256px;
    padding-top: 256px;
  }
}

@media (max-width:399.9999px) {
  .c6 h1,
  .c6 h2,
  .c6 h3,
  .c6 h4,
  .c6 h5,
  .c6 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c6 h1,
  .c6 h2,
  .c6 h3,
  .c6 h4,
  .c6 h5,
  .c6 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c9 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c9 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c9 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c9 {
    max-width: 720px;
  }
}

@media (max-width:399.9999px) {
  .c7 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c7 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c7 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c7 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c5 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_black.jpg?v=1"
            style={
              Object {
                "verticalAlign": "bottom",
                "width": "100%",
              }
            }
          />
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h3>
                Darkest blacks
              </h3>
            </div>
            <p
              className="c7"
            >
              Capture the full atmosphere of the darkest scenes without losing any visibility.
            </p>
          </div>
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          className="c8"
        >
          <img
            alt=""
            src="/static/god_of_war_hdr_white.jpg?v=1"
            style={
              Object {
                "verticalAlign": "bottom",
                "width": "100%",
              }
            }
          />
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <h3>
                Brightest whites
              </h3>
            </div>
            <p
              className="c9"
            >
              Vibrant, alive scenes are a given when capturing in HDR.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShoppingBag 0 items 1`] = `
<div
  className=""
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots ShoppingBag 1 item 1`] = `
.c0 {
  border-bottom: 2px solid #eee;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <p>
      RecordRig - Stealth Black
    </p>
    <p>
      + 2TB HDD
    </p>
    <p>
      1
    </p>
  </div>
  <div
    className=""
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className=""
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag 2 item 1`] = `
.c0 {
  border-bottom: 2px solid #eee;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <p>
      RecordRig - Pristine White
    </p>
    
    <p>
      1
    </p>
  </div>
  <div
    className=""
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className=""
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag Default 1`] = `
<div
  className=""
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots Text capsheading 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h3>
    Capture HDR gameplay videos
  </h3>
</div>
`;

exports[`Storyshots Text capsheading custom color 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h3>
    Capture HDR gameplay videos
  </h3>
</div>
`;

exports[`Storyshots Text capsheading custom selector 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media (max-width:399.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

<div
  className="c0"
>
  <h4>
    Capture HDR gameplay videos
  </h4>
</div>
`;

exports[`Storyshots Text default 1`] = `
.c0 {
  color: #000;
}

@media (max-width:399.9999px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<span
  className="c0"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</span>
`;

exports[`Storyshots Text heading 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      Cinematic 4K HDR
      <br />
      video example.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading centered 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: center;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 96%;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 span {
    max-width: 80%;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      Record your gameplay in the highest quality.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading custom color 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #408bfc;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h2>
    <span>
      4K 60FPS + HDR
      <br />
      videos are the future.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Text heading custom selector 1`] = `
.c0 h1,
.c0 h2,
.c0 h3,
.c0 h4,
.c0 h5,
.c0 h6 {
  color: #000;
  margin-bottom: 0;
  margin-top: 0;
  text-align: left;
}

.c0 span {
  display: inline-block;
}

@media (max-width:575.9999px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 44px;
    line-height: 52px;
  }

  .c0 span {
    max-width: 480px;
  }
}

@media (min-width:576px) {
  .c0 h1,
  .c0 h2,
  .c0 h3,
  .c0 h4,
  .c0 h5,
  .c0 h6 {
    font-size: 56px;
    line-height: 64px;
  }
}

@media (min-width:735px) and (max-width:1023.9999px) {
  .c0 span {
    max-width: 592px;
  }
}

@media (min-width:1024px) {
  .c0 span {
    max-width: 640px;
  }
}

<div
  className="c0"
>
  <h1>
    <span>
      RecordRig technical specifications.
    </span>
  </h1>
</div>
`;

exports[`Storyshots Text paragraph 1`] = `
.c0 {
  color: #000;
}

@media (max-width:399.9999px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<p
  className="c0"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</p>
`;

exports[`Storyshots Text paragraph custom color 1`] = `
.c0 {
  color: #d5d9e0;
}

@media (max-width:399.9999px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <p
    className="c0"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </p>
</div>
`;

exports[`Storyshots Text text custom color 1`] = `
.c0 {
  color: #d5d9e0;
}

@media (max-width:399.9999px) {
  .c0 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c0 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c0 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c0 {
    max-width: 720px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <span
    className="c0"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </span>
</div>
`;

exports[`Storyshots Tile bottom image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #24a148;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Record 4K HDR on Xbox One
        </h3>
      </div>
      <p
        className="c3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/controller-xbox.png"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile custom colors 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #408bfc;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <img
        alt=""
        src="/static/icon-record-blue-large.png"
        style={
          Object {
            "height": "58px",
            "marginBottom": "20px",
            "width": "58px",
          }
        }
      />
      <div
        className="c2"
      >
        <h3>
          Record with the click of a button
        </h3>
      </div>
      <p
        className="c3"
      >
        RECentral comes pre-installed and pre-configured, ready to start recording.Spend less time configuring and getting to know your tool, and more time doing what you do best: gaming.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile default 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #000;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #000;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #fff;
  width: 100%;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Pay later or pay in parts
        </h3>
      </div>
      <p
        className="c3"
      >
        If you're located in Austria, Denmark, Finland, Germany, the Netherlands, Norway, Sweden or the United Kingdom you can use Klarna to place your order now and Pay Later, after you've received your RecordRig. Or, Slice It: pay in equal parts over a larger period of time, completely interest-free, only starting payments after having received your RecordRig.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile link 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #009c98;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #f2f4f8;
  border-bottom: 8px solid #009c98;
  color: inherit;
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <a
    className="c0"
    href="/tech-specs"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Technical specifications
        </h3>
      </div>
      <span
        style={
          Object {
            "display": "block",
            "fontSize": "48px",
            "lineHeight": "56px",
            "margin": "64px 0",
          }
        }
      >
        Get the full list of what's included with RecordRig.
      </span>
      <span
        style={
          Object {
            "color": "#009c98",
            "display": "block",
            "fontSize": "18px",
            "textAlign": "right",
          }
        }
      >
        Learn more
      </span>
    </div>
  </a>
</div>
`;

exports[`Storyshots Tile top image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #da1e28;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #000;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #f2f4f8;
  width: 100%;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/4k_hdr_god_of_war_white.jpg"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Brightest whites
        </h3>
      </div>
      <p
        className="c3"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile wide panel with contained image 1`] = `
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4,
.c2 h5,
.c2 h6 {
  color: #408bfc;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

.c3 {
  color: #ffffff;
}

.c1 {
  padding-bottom: 42px;
  padding-top: 42px;
}

.c1 > img {
  vertical-align: bottom;
}

.c1 > p {
  font-weight: bold;
}

.c0 {
  background-color: #13171a;
  width: 100%;
}

@media (max-width:399.9999px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 14px;
    line-height: 14px;
  }
}

@media (min-width:400px) {
  .c2 h1,
  .c2 h2,
  .c2 h3,
  .c2 h4,
  .c2 h5,
  .c2 h6 {
    font-size: 16px;
    line-height: 16px;
  }
}

@media (max-width:399.9999px) {
  .c3 {
    font-size: 16px;
    line-height: 21px;
  }
}

@media (min-width:400px) {
  .c3 {
    font-size: 18px;
    line-height: 24px;
  }
}

@media (max-width:1023.9999px) {
  .c3 {
    max-width: 656px;
  }
}

@media (min-width:1024px) {
  .c3 {
    max-width: 720px;
  }
}

@media (max-width:767.9999px) {
  .c1 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:768px) {
  .c1 {
    padding-left: 32px;
    padding-right: 32px;
  }
}

<div
  style={
    Object {
      "maxWidth": "992px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <h3>
          Record with confidence using RECentral
        </h3>
      </div>
      <p
        className="c3"
      >
        Maecenas nec neque facilisis, aliquet sem sed, placerat lorem. Donec quis mauris risus. Quisque sodales diam ut elementum ultricies. Pellentesque laoreet commodo mauris, ut condimentum nisi cursus eget. In scelerisque at elit vitae dictum.
      </p>
      <div
        style={
          Object {
            "padding": "48px 0",
            "textAlign": "center",
          }
        }
      >
        <img
          alt=""
          src="/static/4k_hdr_streaming_capturing_software.png"
          style={
            Object {
              "maxWidth": "100%",
              "verticalAlign": "bottom",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
